--- a/Web.html
+++ b/Web.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Page Git Test</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<p>This is a  first paragraph</p>
+<p>This is a second paragraph</p>
+<p>This is a third paragraph</p>
 
 </body>
 </html>
